2006-02-04  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* configure.in doc/ja_JP.eucJP/README.w32
	* timidity/Makefile.am windrv/Makefile.am windrv/timiditydrv.cpp
	* windrv/timiditydrv.def: timiditydrv.dll can comple with digital Mars
	* timidity/portaudio_a.c: enable WRD with portaudio.
	* timidity/playmidi.c interface/rtsyn_common.c timidity/instrum.c
	* timidity/readmidi.c: fix unfreed memory.

2006-01-29  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>
	
	* timidity/playmidy.c: export reet_midi();
	* interface/rtsyn_common.c: bugfix
	* timidity/portaudio_a.c: latency changes by interface charactor.

2006-01-28  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	Fixes of memory leak (checked with win_and dumb win_gui)
	* interface/w32g.h interface/w32g_mag.c interface/w32g_mag.h 
	* interface/w32g_playlist.c interface/w32g_subwin.c interface/w32g_subwin.h
	* interface/w32g_utl.c interface/w32g_utl.h libarc/arc.c
	* timidity/aq.c timidity/aq.h timidity/instrum.c timidity/instrum.h
	* timidity/playmidi.c timidity/readmidi.c timidity/readmidi.h
	* timidity/recache.c timidity/recache.h timidity/resample.c
	* timidity/resample.h timidity/sffile.c timidity/sndfont.c
	* timidity/timidity.c timidity/wrdt.c windrv/timiwp_timidity.c

	* interface/rtsyn_common.c: not free_global_mblock() bitween sound;

2006-01-25  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* windrv/mmddk.h: Added. LGPL version.
	* windrv/Makefile.am
	* doc/ja_JP.eucJP/README.w32
	* doc/C/README.w32: no more depence on NTDDK.
	* interface/rtsyn_common.c: call free_global_mblock() with option -U
	* timidity/readmidi.c: Mingw gcc3 and Borland C hack

2006-01-23  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* timidity/mix.c
	* timidity/optcode.c timidity/optcode.h timidity/playmidi.c
	* timidity/reverb.c timidity/timidity.c timidity/wrd.h
	* timidity/wrdt.c: supress Borland C inline warrings.

2006-01-23  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* timidity/readmidi.c: XG reverb fix